[gd_scene load_steps=2 format=3 uid="uid://baw134q2staal"]

[ext_resource type="Script" uid="uid://f1c5s84wf8o4" path="res://addons/gnet/examples/CapsuleRoom/LobbySelector.gd" id="1_pd5hh"]

[node name="Main" type="Node3D"]

[node name="LobbySelector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pd5hh")

[node name="VBoxContainer" type="VBoxContainer" parent="LobbySelector"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnetButton" type="Button" parent="LobbySelector/VBoxContainer"]
layout_mode = 2
text = "Host/Join ENet Game"

[node name="SteamButton" type="Button" parent="LobbySelector/VBoxContainer"]
layout_mode = 2
text = "Host/Join Steam Game"

[node name="LobbyContainer" type="Control" parent="LobbySelector"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
